# candidate-transformer

./: .gitignore  README.md  cli.py  last_run_output.json  output_custom.json  output_default.json  pyproject.toml  requirements.txt
config/: default_schema.json  generic_value_stoplist.json  sample_projection_config.json  source_confidence.json
sample_data/: ats_ayush.json  ats_export.json  custom_config.json  recruiter_export.csv
scripts/: generate_outputs.py  run_gold_eval.py
src/: __init__.py  confidence.py  duplicate_suggestions.py  explain.py  merge.py  models.py  normalizers.py  pipeline.py  projection.py  storage.py  validation.py  webapp.py
src/extractors/: __init__.py  ats_extractor.py  csv_extractor.py  github_extractor.py  resume_extractor.py
templates/: base.html  index.html  results.html
tests/: __init__.py  test_ats_extractor.py  test_confidence.py  test_csv_extractor.py  test_duplicate_suggestions.py  test_explain.py  test_github_extractor.py  test_identity_persistence.py  test_merge.py  test_models.py  test_normalizers.py  test_pipeline_integration.py  test_projection.py  test_resume_extractor.py  test_storage.py  test_validation.py  test_webapp.py
tests/gold_eval/: gold_expected.json
tests/gold_eval/gold_input/: gold_ats.json  gold_csv.csv  gold_github_mocks.json
