[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "A pipeline to extract, normalize, merge, and project candidate data."
requires-python = ">=3.11"
dependencies = [
    "phonenumbers",
    "pycountry",
    "requests",
    "jsonschema",
    "python-dateutil"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
candidate-transformer = "cli:main"
